src/Parser/grammar.txt
<program> = <statement>* End

<statements> = <statement>*

<statement> =
  | <empty-statement>
  | <comment>
  | <function-declaration>
  | <expression-statement>
  | <block>

<empty-statement> = "\n"

TODO: Add <function-expression> without <identifier>
<function-declaration> = "function" <identifier> "(" ")" <block>

<block> = "{" <statements> "}"

<expression-statement> = <expression> "\n"

<expression> =
  | <assigment>
  | <term> { "+" | "-" <term> }

<assigment> = <identifier> "=" <expression>

<term> = <factor> { "*" | "/" <factor> }

<factor> =
  | "+" | "-" <factor>
  | <power>

<power> = <atom> { "**" <factor> }

<atom> =
  | <number>
  | <function-call>
  | <identifier>
  | <group>

TODO: Maybe a function call should be implemented as postfix unary operation?
<function-call> = <identifier> "(" ")"

<group> = "(" <expression> ")"
